--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     margin: 20px;
     font-family: Courier New, Courier, monospace;
-    background-color: m;
+    background-color: skyblue;
 }
 
 .avatar {
