add background pic and adjust text placement

--- a/sadstyles.css
+++ b/sadstyles.css
@@ -1,14 +1,30 @@
 body {
-    background-color: indigo;
+    background-position: center;   
 }
 
-h1, h3 {
-    background-color: indigo;
-    margin-left: 20px;
+h1 {
+    position: absolute;
+    top: 75px;
+    left: 500px;
+}
+
+h3 {
+    position: absolute;
+    top: 125px;
+    left: 500px;
 }
 
 #paragraph {
-    background-color: indigo;
-    margin-left: 20px;
-    padding-top: 15px;
+    position: absolute;
+    top: 180px;
+    left: 500px;
+}
+
+.sadness {
+    width: 100%;
+}
+
+#screen {
+    position: relative;
+    
 }
